Custom pose bone colors invisible in Stick Mode #115434

Closed
opened 2023-11-26 05:39:45 +01:00 by i.am.ozark · 5 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08
Worked: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb

As the title says, when a custom pose bone bone color is used, it becomes invisible in Stick bone view. Octahedral and the rest are still fine. I've attached two images showing the difference, as well as the relevant .blend file.

**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` Worked: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` As the title says, when a custom pose bone bone color is used, it becomes invisible in Stick bone view. Octahedral and the rest are still fine. I've attached two images showing the difference, as well as the relevant .blend file.
i.am.ozark added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-11-26 05:39:45 +01:00
Member

Thanks for the report. I can confirm, bisecting.

Thanks for the report. I can confirm, bisecting.
Member

Caused by d4262071b1
This is because alpha channel is 0 instead of 255 (and we're now copying all 4 channels copy_v4_v4_uchar, hence the error)
cc @Jeroen-Bakker

Caused by d4262071b18ba56f697d80655f33d0ef196d7b03 This is because alpha channel is 0 instead of 255 (and we're now copying all 4 channels `copy_v4_v4_uchar`, hence the error) cc @Jeroen-Bakker
Member

Error seems to be in the UI/data management side of custom bone colors, my fix only makes the issue visible.

The custom bone colors are stored in ThemeWireColor as RGBA, but in the user interface only RGB can be edited.
What IMO needs to be done is that when initializing this struct the A value should be filled fully opaque (255).

This isn't done for #109976 there only RGB are filled, A is ignored.
I can fix this in the drawing code, but that seems to be odd as the attribute uses A values.

Changing this will requires:

  • versioning code to set 1.0 to all bone color custom color structs
  • initialize the bone color struct to set the alpha value.

Would rather have the animation module to take on this issue as it is more data/functional related and I don't
want to assume stuff.

Error seems to be in the UI/data management side of custom bone colors, my fix only makes the issue visible. The custom bone colors are stored in `ThemeWireColor` as RGBA, but in the user interface only RGB can be edited. What IMO needs to be done is that when initializing this struct the A value should be filled fully opaque (255). This isn't done for https://projects.blender.org/blender/blender/pulls/109976 there only RGB are filled, A is ignored. I can fix this in the drawing code, but that seems to be odd as the attribute uses A values. Changing this will requires: * versioning code to set 1.0 to all bone color custom color structs * initialize the bone color struct to set the alpha value. Would rather have the animation module to take on this issue as it is more data/functional related and I don't want to assume stuff.
Member

I can fix this in the drawing code, but that seems to be odd as the attribute uses A values.

Right, btw I edited the actual commit that caused it (I accidently pasted non-existing hash value 😅 )

> I can fix this in the drawing code, but that seems to be odd as the attribute uses A values. Right, btw I edited the actual commit that caused it (I accidently pasted non-existing hash value 😅 )
Member
cc @dr.sybren
Nathan Vegdahl self-assigned this 2023-11-27 10:49:48 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115434
No description provided.