source/blender/editors/armature/armature_add.cc
@@ -83,6 +83,12 @@ EditBone *ED_armature_ebone_add(bArmature *arm, const char *name)
   bone->ease1 = 1.0f;
   bone->ease2 = 1.0f;
 
+  /* Prevent custom bone colors from having alpha zero.
+   * Part of the fix for issue #115434. */
+  bone->color.custom.solid[3] = 255;
+  bone->color.custom.select[3] = 255;
+  bone->color.custom.active[3] = 255;
+
   copy_v3_fl(bone->scale_in, 1.0f);
   copy_v3_fl(bone->scale_out, 1.0f);
 
@@ -1521,6 +1527,8 @@ static int armature_extrude_exec(bContext *C, wmOperator *op)
                 newbone->flag |= BONE_CONNECTED;
               }
             }
+
+            newbone->color = ebone->color;
 
             newbone->weight = ebone->weight;
             newbone->dist = ebone->dist;
